Ajuste em cursos

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -801,21 +801,33 @@
                                 </div>
 
                                 <div class="row mt-lg">
-                                    <div class="col-md-3">
-                                        <label class="form-label semibold">Tipo de curso</label>
+                                    <div class="col-md-4">
+                                        <label class="form-label semibold">Tipo</label>
                                         <p>Presencial / Online</p>
                                     </div>
-                                    <div class="col-md-3">
-                                        <label class="form-label semibold">Valor</label>
-                                        <p class="text-warning">
-                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i><strong> Pendente</strong>
+                                    <div class="col-md-4">
+                                        <label class="form-label semibold">Escolaridade</label>
+                                        <p>
+                                            2º Grau
                                         </p>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-md-4">
                                         <label class="form-label semibold">Multinível</label>
                                         <p>Sim</p>
                                     </div>
-                                    <div class="col-md-3">
+                                </div>
+                                <div class="row mt-lg">
+                                    <div class="col-md-4">
+                                        <label class="form-label semibold">Idade mínima</label>
+                                        <p>10 anos</p>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label class="form-label semibold">Idade máxima</label>
+                                        <p>
+                                            20 anos
+                                        </p>
+                                    </div>
+                                    <div class="col-md-4">
                                         <label class="form-label semibold">Curso especial</label>
                                         <p>Sim</p>
                                     </div>
@@ -1019,7 +1031,9 @@
 
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary-outline" data-dismiss="modal"><i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i>Editar</button>
+                        <button type="button" class="btn btn-secondary-outline" data-dismiss="modal">
+                            <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i>Editar
+                        </button>
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
